# ComfyUI-EasyNoobai

./: README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish_action.yml
assets/: noobai-list-convert.py
example_workflows/: EasyNoobai Nodes.json
js/: easy_noobai.js
src/: __init__.py  artists.py  characters.py  characters_small.py  e621_artists.py  e621_characters.py
src/nodes/: pony_tokens.py  poses.py
workflows/: Basic.json  Hair_Clothes.json
